[package]
name = "enc"
version = "0.1.3"
authors = ["quininer kel <quininer@live.com>"]
description = "dead simple file encryption tool."

[[bin]]
name = "enc"
path = "main.rs"

[dependencies]
rand = "0.3"
clap = "2.17"
sarkara = "0.6"
seckey = "0.2"
ttyaskpass = { git = "https://github.com/quininer/ttyaskpass.git" }
